--- a/examples/GeneralizedWater/GeneralizedWater.tex
+++ b/examples/GeneralizedWater/GeneralizedWater.tex
@@ -18,7 +18,7 @@
 %
 \section*{Hamiltonian}%
 \begin{dmath}%
-\mathcal{H} = J_{x} \left(\frac{J_{x}}{2} \left(\frac{\left(- \operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right)^{2} \sin^{2}{\left (q{\left (t \right )} \right )}}{8 m \left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) \left(\cos{\left (q{\left (t \right )} \right )} + 1\right) \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )} \sin^{4}{\left (\frac{1}{2} q{\left (t \right )} \right )}} + \frac{2}{m \left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) \left(- \cos{\left (q{\left (t \right )} \right )} + 1\right)}\right) - \frac{J_{z} \left(- \operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right)}{4 m \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )} \sin{\left (q{\left (t \right )} \right )}}\right) + \frac{J_{y}^{2} \left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right)}{2 m \left(- \left(\operatorname{r_{1}}^{2}{\left (t \right )} - \operatorname{r_{2}}^{2}{\left (t \right )}\right)^{2} + \left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right)^{2}\right)} + \frac{J_{y} p{\left (t \right )}}{2 m \operatorname{r_{2}}^{2}{\left (t \right )}} - \frac{J_{y} p{\left (t \right )}}{2 m \operatorname{r_{1}}^{2}{\left (t \right )}} + J_{z} \left(- \frac{J_{x} \left(- \operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right)}{4 m \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )} \sin{\left (q{\left (t \right )} \right )}} + \frac{J_{z} \left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right)}{4 m \left(\cos{\left (q{\left (t \right )} \right )} + 1\right) \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )}}\right) + \frac{p^{2}{\left (t \right )}}{2 m \operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{p^{2}{\left (t \right )}}{2 m \operatorname{r_{1}}^{2}{\left (t \right )}} + \frac{\operatorname{p_{1}}^{2}{\left (t \right )}}{2 m} + \frac{\operatorname{p_{2}}^{2}{\left (t \right )}}{2 m}%
+\mathcal{H} = \frac{J_{y} p{\left (t \right )}}{2 m \operatorname{r_{2}}^{2}{\left (t \right )}} - \frac{J_{y} p{\left (t \right )}}{2 m \operatorname{r_{1}}^{2}{\left (t \right )}} + \frac{p^{2}{\left (t \right )}}{2 m \operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{p^{2}{\left (t \right )}}{2 m \operatorname{r_{1}}^{2}{\left (t \right )}} + \frac{\operatorname{p_{1}}^{2}{\left (t \right )}}{2 m} + \frac{\operatorname{p_{2}}^{2}{\left (t \right )}}{2 m} + \frac{1}{2 m \left(- \cos{\left (q{\left (t \right )} \right )} + 1\right) \left(\cos{\left (q{\left (t \right )} \right )} + 1\right) \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )}} \left(J_{x}^{2} \operatorname{r_{1}}^{2}{\left (t \right )} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + J_{x}^{2} \operatorname{r_{2}}^{2}{\left (t \right )} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + J_{x} J_{z} \operatorname{r_{1}}^{2}{\left (t \right )} \sin{\left (q{\left (t \right )} \right )} - J_{x} J_{z} \operatorname{r_{2}}^{2}{\left (t \right )} \sin{\left (q{\left (t \right )} \right )} + \frac{J_{y}^{2}}{8} \left(- \cos{\left (2 q{\left (t \right )} \right )} + 1\right) \operatorname{r_{1}}^{2}{\left (t \right )} + \frac{J_{y}^{2}}{8} \left(- \cos{\left (2 q{\left (t \right )} \right )} + 1\right) \operatorname{r_{2}}^{2}{\left (t \right )} + J_{z}^{2} \operatorname{r_{1}}^{2}{\left (t \right )} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + J_{z}^{2} \operatorname{r_{2}}^{2}{\left (t \right )} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )}\right)%
 \end{dmath}
 
 %
