--- a/examples/SimpleWater/SimpleWater.tex
+++ b/examples/SimpleWater/SimpleWater.tex
@@ -12,7 +12,7 @@
 \normalsize%
 \section*{Lagrangian}%
 \begin{dmath}%
-\mathcal{L} = m \omega_{x}^{2} r_{0}^{2} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + m \omega_{y}^{2} \left(r_{0}^{2} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + r_{0}^{2} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )}\right) + m \omega_{z}^{2} r_{0}^{2} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + \frac{m r_{0}^{2}}{4} \frac{d}{d t} q{\left (t \right )}^{2}%
+\mathcal{L} = m \omega_{x}^{2} r_{0}^{2} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + m \omega_{y}^{2} \left(r_{0}^{2} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + r_{0}^{2} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )}\right) + m \omega_{z}^{2} r_{0}^{2} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + \frac{m r_{0}^{2}}{4} \left(\frac{d}{d t} q{\left (t \right )}\right)^{2}%
 \end{dmath}
 
 %
