simplification function; great ar-co2 hamiltonian

--- a/examples/SimpleWater/SimpleWater.tex
+++ b/examples/SimpleWater/SimpleWater.tex
@@ -10,15 +10,9 @@
 %
 \begin{document}%
 \normalsize%
-\section*{Lagrangian}%
-\begin{dmath}%
-\mathcal{L} = m \omega_{x}^{2} r_{0}^{2} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + m \omega_{y}^{2} \left(r_{0}^{2} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + r_{0}^{2} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )}\right) + m \omega_{z}^{2} r_{0}^{2} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + \frac{m r_{0}^{2}}{4} \left(\frac{d}{d t} q{\left (t \right )}\right)^{2}%
-\end{dmath}
-
-%
 \section*{Hamiltonian}%
 \begin{dmath}%
-\mathcal{H} = \frac{J_{x}^{2}}{2 m r_{0}^{2} \left(- \cos{\left (q{\left (t \right )} \right )} + 1\right)} + \frac{J_{y}^{2}}{4 m r_{0}^{2}} + \frac{J_{z}^{2}}{2 m r_{0}^{2} \left(\cos{\left (q{\left (t \right )} \right )} + 1\right)} + \frac{p^{2}{\left (t \right )}}{m r_{0}^{2}}%
+\mathcal{H} = - \frac{J_{x}^{2}}{2 m r_{0}^{2} \left(\cos{\left (q{\left (t \right )} \right )} - 1\right)} + \frac{J_{y}^{2}}{4 m r_{0}^{2}} + \frac{J_{z}^{2}}{2 m r_{0}^{2} \left(\cos{\left (q{\left (t \right )} \right )} + 1\right)} + \frac{p^{2}{\left (t \right )}}{m r_{0}^{2}}%
 \end{dmath}
 
 %
