--- a/examples/Ar-CO2/Ar-CO2.tex
+++ b/examples/Ar-CO2/Ar-CO2.tex
@@ -12,7 +12,7 @@
 \normalsize%
 \section*{Hamiltonian}%
 \begin{dmath}%
-\mathcal{H} = \frac{J_{x}^{2}}{m_{1} m_{2} r_{0}^{2} \left(2 m_{1} + m_{3}\right) R^{2}{\left (t \right )} \sin^{2}{\left (\theta{\left (t \right )} \right )}} \left(m_{1}^{2} r_{0}^{2} \cos^{2}{\left (\theta{\left (t \right )} \right )} + \frac{m_{1} m_{2}}{2} r_{0}^{2} \cos^{2}{\left (\theta{\left (t \right )} \right )} + 2 m_{1} m_{2} R^{2}{\left (t \right )} + \frac{m_{1} m_{3}}{2} r_{0}^{2} \cos^{2}{\left (\theta{\left (t \right )} \right )} + m_{2} m_{3} R^{2}{\left (t \right )}\right) + \frac{J_{x} J_{y} \left(- 2 m_{1} - m_{2} - m_{3}\right)}{m_{2} \left(2 m_{1} + m_{3}\right) R^{2}{\left (t \right )} \tan{\left (\theta{\left (t \right )} \right )}} + J_{y}^{2} \left(\frac{2 m_{1}}{4 m_{1} m_{2} R^{2}{\left (t \right )} + 2 m_{2} m_{3} R^{2}{\left (t \right )}} + \frac{m_{2}}{4 m_{1} m_{2} R^{2}{\left (t \right )} + 2 m_{2} m_{3} R^{2}{\left (t \right )}} + \frac{m_{3}}{4 m_{1} m_{2} R^{2}{\left (t \right )} + 2 m_{2} m_{3} R^{2}{\left (t \right )}}\right) + J_{z}^{2} \left(\frac{2 m_{1}}{4 m_{1} m_{2} R^{2}{\left (t \right )} + 2 m_{2} m_{3} R^{2}{\left (t \right )}} + \frac{m_{2}}{4 m_{1} m_{2} R^{2}{\left (t \right )} + 2 m_{2} m_{3} R^{2}{\left (t \right )}} + \frac{m_{3}}{4 m_{1} m_{2} R^{2}{\left (t \right )} + 2 m_{2} m_{3} R^{2}{\left (t \right )}}\right) + \frac{J_{z} \left(2 m_{1} + m_{2} + m_{3}\right) \left(2 m_{1}^{2} r_{0}^{2} + m_{1} m_{2} r_{0}^{2} + 4 m_{1} m_{2} R^{2}{\left (t \right )} + m_{1} m_{3} r_{0}^{2} + 2 m_{2} m_{3} R^{2}{\left (t \right )}\right) \operatorname{p_{\theta}}{\left (t \right )}}{2 m_{2} \left(2 m_{1} + m_{3}\right) \left(m_{1}^{2} r_{0}^{2} + \frac{m_{1} m_{2}}{2} r_{0}^{2} + 2 m_{1} m_{2} R^{2}{\left (t \right )} + \frac{m_{1} m_{3}}{2} r_{0}^{2} + m_{2} m_{3} R^{2}{\left (t \right )}\right) R^{2}{\left (t \right )}} + \frac{\left(2 m_{1} + m_{2} + m_{3}\right) p^{2}{\left (t \right )}}{2 m_{2} \left(2 m_{1} + m_{3}\right)} + \frac{\operatorname{p_{\theta}}^{2}{\left (t \right )}}{2 m_{1} m_{2} r_{0}^{2} \left(2 m_{1} + m_{3}\right) R^{2}{\left (t \right )}} \left(2 m_{1}^{2} r_{0}^{2} + m_{1} m_{2} r_{0}^{2} + 4 m_{1} m_{2} R^{2}{\left (t \right )} + m_{1} m_{3} r_{0}^{2} + 2 m_{2} m_{3} R^{2}{\left (t \right )}\right)%
+\mathcal{H} = J_{x}^{2} \left(\frac{2 m_{1} + m_{2} + m_{3}}{2 m_{2} \left(2 m_{1} + m_{3}\right) R^{2}{\left (t \right )} \tan^{2}{\left (\theta{\left (t \right )} \right )}} + \frac{1}{m_{1} r_{0}^{2} \sin^{2}{\left (\theta{\left (t \right )} \right )}}\right) - \frac{J_{x} J_{y} \left(2 m_{1} + m_{2} + m_{3}\right)}{m_{2} \left(2 m_{1} + m_{3}\right) R^{2}{\left (t \right )} \tan{\left (\theta{\left (t \right )} \right )}} + \frac{J_{y}^{2} \left(2 m_{1} + m_{2} + m_{3}\right)}{2 m_{2} \left(2 m_{1} + m_{3}\right) R^{2}{\left (t \right )}} + \frac{J_{z}^{2} \left(2 m_{1} + m_{2} + m_{3}\right)}{2 m_{2} \left(2 m_{1} + m_{3}\right) R^{2}{\left (t \right )}} + \frac{J_{z} \left(2 m_{1} + m_{2} + m_{3}\right) \operatorname{p_{\theta}}{\left (t \right )}}{m_{2} \left(2 m_{1} + m_{3}\right) R^{2}{\left (t \right )}} + \left(\frac{2 m_{1} + m_{2} + m_{3}}{2 m_{2} \left(2 m_{1} + m_{3}\right) R^{2}{\left (t \right )}} + \frac{1}{m_{1} r_{0}^{2}}\right) \operatorname{p_{\theta}}^{2}{\left (t \right )} + \frac{\left(2 m_{1} + m_{2} + m_{3}\right) p^{2}{\left (t \right )}}{2 m_{2} \left(2 m_{1} + m_{3}\right)}%
 \end{dmath}
 
 %
