--- a/examples/GeneralizedWater/GeneralizedWater.tex
+++ b/examples/GeneralizedWater/GeneralizedWater.tex
@@ -10,15 +10,9 @@
 %
 \begin{document}%
 \normalsize%
-\section*{Lagrangian}%
-\begin{dmath}%
-\mathcal{L} = \frac{m \omega_{y}}{2} \left(- \operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) \frac{d}{d t} q{\left (t \right )} + \frac{m}{8} \left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) \left(\frac{d}{d t} q{\left (t \right )}\right)^{2} + \frac{m}{2} \left(\frac{d}{d t} \operatorname{r_{1}}{\left (t \right )}\right)^{2} + \frac{m}{2} \left(\frac{d}{d t} \operatorname{r_{2}}{\left (t \right )}\right)^{2} + \omega_{x} \left(\frac{\omega_{x}}{2} \left(m \operatorname{r_{1}}^{2}{\left (t \right )} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + m \operatorname{r_{2}}^{2}{\left (t \right )} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )}\right) + \frac{\omega_{z}}{2} \left(- m \operatorname{r_{1}}^{2}{\left (t \right )} \sin{\left (\frac{1}{2} q{\left (t \right )} \right )} \cos{\left (\frac{1}{2} q{\left (t \right )} \right )} + m \operatorname{r_{2}}^{2}{\left (t \right )} \sin{\left (\frac{1}{2} q{\left (t \right )} \right )} \cos{\left (\frac{1}{2} q{\left (t \right )} \right )}\right)\right) + \frac{\omega_{y}^{2}}{2} \left(m \left(\operatorname{r_{1}}^{2}{\left (t \right )} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + \operatorname{r_{1}}^{2}{\left (t \right )} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )}\right) + m \left(\operatorname{r_{2}}^{2}{\left (t \right )} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + \operatorname{r_{2}}^{2}{\left (t \right )} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )}\right)\right) + \omega_{z} \left(\frac{\omega_{x}}{2} \left(- m \operatorname{r_{1}}^{2}{\left (t \right )} \sin{\left (\frac{1}{2} q{\left (t \right )} \right )} \cos{\left (\frac{1}{2} q{\left (t \right )} \right )} + m \operatorname{r_{2}}^{2}{\left (t \right )} \sin{\left (\frac{1}{2} q{\left (t \right )} \right )} \cos{\left (\frac{1}{2} q{\left (t \right )} \right )}\right) + \frac{\omega_{z}}{2} \left(m \operatorname{r_{1}}^{2}{\left (t \right )} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + m \operatorname{r_{2}}^{2}{\left (t \right )} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )}\right)\right)%
-\end{dmath}
-
-%
 \section*{Hamiltonian}%
 \begin{dmath}%
-\mathcal{H} = \frac{J_{x}^{2} \left(\frac{1}{4} \operatorname{r_{1}}^{2}{\left (t \right )} + \frac{1}{4} \operatorname{r_{2}}^{2}{\left (t \right )}\right)}{m \left(- \cos{\left (q{\left (t \right )} \right )} + 1\right) \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{J_{x} J_{z} \left(\operatorname{r_{1}}{\left (t \right )} - \operatorname{r_{2}}{\left (t \right )}\right) \left(\operatorname{r_{1}}{\left (t \right )} + \operatorname{r_{2}}{\left (t \right )}\right)}{2 m \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )} \sin{\left (q{\left (t \right )} \right )}} + J_{y}^{2} \left(\frac{1}{8 m \operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{1}{8 m \operatorname{r_{1}}^{2}{\left (t \right )}}\right) - \frac{J_{y} \left(- \operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) p{\left (t \right )}}{2 m \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{J_{z}^{2} \left(\frac{1}{4} \operatorname{r_{1}}^{2}{\left (t \right )} + \frac{1}{4} \operatorname{r_{2}}^{2}{\left (t \right )}\right)}{m \left(\cos{\left (q{\left (t \right )} \right )} + 1\right) \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{\left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) p^{2}{\left (t \right )}}{2 m \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{\operatorname{p_{1}}^{2}{\left (t \right )}}{2 m} + \frac{\operatorname{p_{2}}^{2}{\left (t \right )}}{2 m}%
+\mathcal{H} = - \frac{J_{x}^{2} \left(\frac{1}{\operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{1}{\operatorname{r_{1}}^{2}{\left (t \right )}}\right)}{4 m \left(\cos{\left (q{\left (t \right )} \right )} - 1\right)} + \frac{J_{x} J_{z} \left(\frac{1}{\operatorname{r_{2}}^{2}{\left (t \right )}} - \frac{1}{\operatorname{r_{1}}^{2}{\left (t \right )}}\right)}{2 m \sin{\left (q{\left (t \right )} \right )}} + J_{y}^{2} \left(\frac{1}{8 m \operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{1}{8 m \operatorname{r_{1}}^{2}{\left (t \right )}}\right) + J_{y} \left(\frac{1}{2 m \operatorname{r_{2}}^{2}{\left (t \right )}} - \frac{1}{2 m \operatorname{r_{1}}^{2}{\left (t \right )}}\right) p{\left (t \right )} + \frac{J_{z}^{2} \left(\frac{1}{\operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{1}{\operatorname{r_{1}}^{2}{\left (t \right )}}\right)}{4 m \left(\cos{\left (q{\left (t \right )} \right )} + 1\right)} + \left(\frac{1}{2 m \operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{1}{2 m \operatorname{r_{1}}^{2}{\left (t \right )}}\right) p^{2}{\left (t \right )} + \frac{\operatorname{p_{1}}^{2}{\left (t \right )}}{2 m} + \frac{\operatorname{p_{2}}^{2}{\left (t \right )}}{2 m}%
 \end{dmath}
 
 %
