--- a/examples/SimpleWater/SimpleWater.tex
+++ b/examples/SimpleWater/SimpleWater.tex
@@ -12,7 +12,7 @@
 \normalsize%
 \section*{Hamiltonian}%
 \begin{dmath}%
-\mathcal{H} = - \frac{J_{x}^{2}}{2 m r_{0}^{2} \left(\cos{\left (q{\left (t \right )} \right )} - 1\right)} + \frac{J_{y}^{2}}{4 m r_{0}^{2}} + \frac{J_{z}^{2}}{2 m r_{0}^{2} \left(\cos{\left (q{\left (t \right )} \right )} + 1\right)} + \frac{p^{2}{\left (t \right )}}{m r_{0}^{2}}%
+\mathcal{H} = \frac{J_{x}^{2}}{2 m r_{0}^{2} \left(\cos{\left (q{\left (t \right )} \right )} - 1\right)} - \frac{J_{y}^{2}}{4 m r_{0}^{2}} - \frac{J_{z}^{2}}{2 m r_{0}^{2} \left(\cos{\left (q{\left (t \right )} \right )} + 1\right)} - \frac{p^{2}{\left (t \right )}}{m r_{0}^{2}}%
 \end{dmath}
 
 %
