--- a/examples/GeneralizedWater/GeneralizedWater.tex
+++ b/examples/GeneralizedWater/GeneralizedWater.tex
@@ -10,9 +10,15 @@
 %
 \begin{document}%
 \normalsize%
+\section*{Lagrangian}%
+\begin{dmath}%
+\mathcal{L} = \frac{m \omega_{y}^{2}}{2} \left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) + \frac{m \omega_{y}}{2} \left(- \operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) \frac{d}{d t} q{\left (t \right )} + \frac{m}{8} \left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) \frac{d}{d t} q{\left (t \right )}^{2} + \frac{m}{2} \frac{d}{d t} \operatorname{r_{1}}{\left (t \right )}^{2} + \frac{m}{2} \frac{d}{d t} \operatorname{r_{2}}{\left (t \right )}^{2} + \omega_{x} \left(\frac{m \omega_{x}}{2} \left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + \frac{m \omega_{z}}{4} \left(- \operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) \sin{\left (q{\left (t \right )} \right )}\right) + \omega_{z} \left(\frac{m \omega_{x}}{4} \left(- \operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) \sin{\left (q{\left (t \right )} \right )} + \frac{m \omega_{z}}{2} \left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )}\right)%
+\end{dmath}
+
+%
 \section*{Hamiltonian}%
 \begin{dmath}%
-\mathcal{H} = \frac{J_{x}^{2} \left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) \left(- \cos{\left (q{\left (t \right )} \right )} + 1\right)}{16 m \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )} \sin^{4}{\left (\frac{1}{2} q{\left (t \right )} \right )}} + \frac{J_{x} J_{z} \left(\frac{1}{\operatorname{r_{2}}^{2}{\left (t \right )}} - \frac{1}{\operatorname{r_{1}}^{2}{\left (t \right )}}\right)}{2 m \sin{\left (q{\left (t \right )} \right )}} + J_{y}^{2} \left(\frac{1}{8 m \operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{1}{8 m \operatorname{r_{1}}^{2}{\left (t \right )}}\right) + J_{y} \left(\frac{1}{2 m \operatorname{r_{2}}^{2}{\left (t \right )}} - \frac{1}{2 m \operatorname{r_{1}}^{2}{\left (t \right )}}\right) p{\left (t \right )} + \frac{J_{z}^{2} \left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) \left(- \cos{\left (q{\left (t \right )} \right )} + 1\right)}{4 m \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )} \sin^{2}{\left (q{\left (t \right )} \right )}} + \left(\frac{1}{2 m \operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{1}{2 m \operatorname{r_{1}}^{2}{\left (t \right )}}\right) p^{2}{\left (t \right )} - \frac{\operatorname{p_{1}}^{2}{\left (t \right )}}{2 m} - \frac{\operatorname{p_{2}}^{2}{\left (t \right )}}{2 m}%
+\mathcal{H} = \frac{J_{x}^{2} \left(- \left(\cos{\left (q{\left (t \right )} \right )} - 1\right)^{2} \operatorname{r_{1}}^{4}{\left (t \right )} + 2 \left(\cos{\left (q{\left (t \right )} \right )} - 1\right)^{2} \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )} - \left(\cos{\left (q{\left (t \right )} \right )} - 1\right)^{2} \operatorname{r_{2}}^{4}{\left (t \right )} - 16 \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )} \sin^{4}{\left (\frac{1}{2} q{\left (t \right )} \right )}\right)}{16 m \left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) \left(\cos{\left (q{\left (t \right )} \right )} - 1\right) \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )} \sin^{4}{\left (\frac{1}{2} q{\left (t \right )} \right )}} + \frac{J_{x} J_{z} \left(\operatorname{r_{1}}^{2}{\left (t \right )} - \operatorname{r_{2}}^{2}{\left (t \right )}\right)}{2 m \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )} \sin{\left (q{\left (t \right )} \right )}} + J_{y}^{2} \left(\frac{1}{8 m \operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{1}{8 m \operatorname{r_{1}}^{2}{\left (t \right )}}\right) + J_{y} \left(\frac{1}{2 m \operatorname{r_{2}}^{2}{\left (t \right )}} - \frac{1}{2 m \operatorname{r_{1}}^{2}{\left (t \right )}}\right) p{\left (t \right )} + \frac{J_{z}^{2} \left(\operatorname{r_{1}}^{2}{\left (t \right )} + \operatorname{r_{2}}^{2}{\left (t \right )}\right) \left(- \cos{\left (q{\left (t \right )} \right )} + 1\right)}{4 m \operatorname{r_{1}}^{2}{\left (t \right )} \operatorname{r_{2}}^{2}{\left (t \right )} \sin^{2}{\left (q{\left (t \right )} \right )}} + \left(\frac{1}{2 m \operatorname{r_{2}}^{2}{\left (t \right )}} + \frac{1}{2 m \operatorname{r_{1}}^{2}{\left (t \right )}}\right) p^{2}{\left (t \right )} + \frac{\operatorname{p_{1}}^{2}{\left (t \right )}}{2 m} + \frac{\operatorname{p_{2}}^{2}{\left (t \right )}}{2 m}%
 \end{dmath}
 
 %
