--- a/examples/SimpleWater/SimpleWater.tex
+++ b/examples/SimpleWater/SimpleWater.tex
@@ -12,13 +12,13 @@
 \normalsize%
 \section*{Lagrangian}%
 \begin{dmath}%
-\mathcal{L} = - m \omega_{x}^{2} r_{0}^{2} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} - m \omega_{y}^{2} r_{0}^{2} - m \omega_{z}^{2} r_{0}^{2} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} - \frac{m r_{0}^{2}}{4} \frac{d}{d t} q{\left (t \right )}^{2}%
+\mathcal{L} = m \omega_{x}^{2} r_{0}^{2} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + m \omega_{y}^{2} r_{0}^{2} + m \omega_{z}^{2} r_{0}^{2} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )} + \frac{m r_{0}^{2}}{4} \frac{d}{d t} q{\left (t \right )}^{2}%
 \end{dmath}
 
 %
 \section*{Hamiltonian}%
 \begin{dmath}%
-\mathcal{H} = - \frac{J_{x}^{2}}{4 m r_{0}^{2} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )}} - \frac{J_{y}^{2}}{4 m r_{0}^{2}} - \frac{J_{z}^{2}}{4 m r_{0}^{2} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )}} - \frac{p^{2}{\left (t \right )}}{m r_{0}^{2}}%
+\mathcal{H} = \frac{J_{x}^{2}}{4 m r_{0}^{2} \sin^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )}} + \frac{J_{y}^{2}}{4 m r_{0}^{2}} + \frac{J_{z}^{2}}{4 m r_{0}^{2} \cos^{2}{\left (\frac{1}{2} q{\left (t \right )} \right )}} + \frac{p^{2}{\left (t \right )}}{m r_{0}^{2}}%
 \end{dmath}
 
 %
