--- a/monte-carlo/fortran_notebook/Fortran wrapper.ipynb
+++ b/monte-carlo/fortran_notebook/Fortran wrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -200,127 +200,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running...\n",
-      "   /usr/local/opt/python3/bin/python3.5 -m numpy.f2py --fcompiler=gnu95 -m _fortran_magic_7e934ac6ab72d2894e0abcbf8602115a -c /Users/mac/.ipython/fortran/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a.f90\n",
-      "running build\n",
-      "running config_cc\n",
-      "unifing config_cc, config, build_clib, build_ext, build commands --compiler options\n",
-      "running config_fc\n",
-      "unifing config_fc, config, build_clib, build_ext, build commands --fcompiler options\n",
-      "running build_src\n",
-      "build_src\n",
-      "building extension \"_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a\" sources\n",
-      "f2py options: []\n",
-      "f2py:> /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115amodule.c\n",
-      "creating /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5\n",
-      "Reading fortran codes...\n",
-      "\tReading file '/Users/mac/.ipython/fortran/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a.f90' (format:free)\n",
-      "Line #22 in /Users/mac/.ipython/fortran/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a.f90:\"    DATA (RLAM(I),BLAM(I),I=1,10)/         32.27581D0, 2.03171D0,         0.D0, 0.D0,         11.85757D0, 1.79571D0,         0.D0, 0.D0,         -9.41362D0, 2.09529D0,         32.36857D0, 2.12256D0,         -3.40252D0, 1.87293D0,         -1.68672D0, 2.18922D0,         -1.91165D0, 1.96196D0,         1.10092D0, 1.98533D0/\"\n",
-      "\tanalyzeline: implied-DO list \"(rlam(i),blam(i),i=1,10)\" is not supported. Skipping.\n",
-      "Post-processing...\n",
-      "\tBlock: _fortran_magic_7e934ac6ab72d2894e0abcbf8602115a\n",
-      "\t\t\tBlock: potdat4\n",
-      "{'attrspec': ['dimension(n)']}\n",
-      "In: :_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a:/Users/mac/.ipython/fortran/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a.f90:sumleg\n",
-      "vars2fortran: No typespec for argument \"a\".\n",
-      "\t\t\tBlock: sumleg\n",
-      "Post-processing (stage 2)...\n",
-      "Building modules...\n",
-      "\tBuilding module \"_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a\"...\n",
-      "\t\tConstructing wrapper function \"potdat4\"...\n",
-      "\t\t  potdat4()\n",
-      "\t\tCreating wrapper for Fortran function \"sumleg\"(\"sumleg\")...\n",
-      "\t\tConstructing wrapper function \"sumleg\"...\n",
-      "\t\t  sumleg = sumleg(a,cx,[n])\n",
-      "\t\tConstructing COMMON block support for \"pothut\"...\n",
-      "\t\t  rlam,blam,olam,rdispc,rref,bfac,rdispo,bond,c8o2,isite,c10o,c8o,c6o,c10c2,c8c2,c6c2,c10c,c8c,c6c,site,c10o2,sfac2,sfac0,c6o2,sface,sfacc,nlegc,nlego\n",
-      "\tWrote C/API module \"_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a\" to file \"/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115amodule.c\"\n",
-      "\tFortran 77 wrappers are saved to \"/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a-f2pywrappers.f\"\n",
-      "  adding '/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/fortranobject.c' to sources.\n",
-      "  adding '/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5' to include_dirs.\n",
-      "copying /usr/local/lib/python3.5/site-packages/numpy/f2py/src/fortranobject.c -> /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5\n",
-      "copying /usr/local/lib/python3.5/site-packages/numpy/f2py/src/fortranobject.h -> /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5\n",
-      "  adding '/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a-f2pywrappers.f' to sources.\n",
-      "build_src: building npy-pkg config files\n",
-      "running build_ext\n",
-      "customize UnixCCompiler\n",
-      "customize UnixCCompiler using build_ext\n",
-      "customize Gnu95FCompiler\n",
-      "Found executable /usr/local/bin/gfortran\n",
-      "customize Gnu95FCompiler using build_ext\n",
-      "building '_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a' extension\n",
-      "compiling C sources\n",
-      "C compiler: clang -Wno-unused-result -Wsign-compare -Wunreachable-code -fno-common -dynamic -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes\n",
-      "\n",
-      "creating /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/var\n",
-      "creating /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/var/folders\n",
-      "creating /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/var/folders/qr\n",
-      "creating /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn\n",
-      "creating /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T\n",
-      "creating /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr\n",
-      "creating /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5\n",
-      "compile options: '-I/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5 -I/usr/local/lib/python3.5/site-packages/numpy/core/include -I/usr/local/include -I/usr/local/opt/openssl/include -I/usr/local/opt/sqlite/include -I/usr/local/Cellar/python3/3.5.2_3/Frameworks/Python.framework/Versions/3.5/include/python3.5m -c'\n",
-      "clang: /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115amodule.c\n",
-      "In file included from /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115amodule.c:19:\n",
-      "In file included from /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/fortranobject.h:13:\n",
-      "In file included from /usr/local/lib/python3.5/site-packages/numpy/core/include/numpy/arrayobject.h:4:\n",
-      "In file included from /usr/local/lib/python3.5/site-packages/numpy/core/include/numpy/ndarrayobject.h:18:\n",
-      "In file included from /usr/local/lib/python3.5/site-packages/numpy/core/include/numpy/ndarraytypes.h:1788:\n",
-      "/usr/local/lib/python3.5/site-packages/numpy/core/include/numpy/npy_1_7_deprecated_api.h:15:2: warning: \"Using deprecated NumPy API, disable it by \"          \"#defining NPY_NO_DEPRECATED_API NPY_1_7_API_VERSION\" [-W#warnings]\n",
-      "#warning \"Using deprecated NumPy API, disable it by \" \\\n",
-      " ^\n",
-      "/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115amodule.c:147:12: warning: unused function 'f2py_size' [-Wunused-function]\n",
-      "static int f2py_size(PyArrayObject* var, ...)\n",
-      "           ^\n",
-      "2 warnings generated.\n",
-      "clang: /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/fortranobject.c\n",
-      "In file included from /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/fortranobject.c:2:\n",
-      "In file included from /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/fortranobject.h:13:\n",
-      "In file included from /usr/local/lib/python3.5/site-packages/numpy/core/include/numpy/arrayobject.h:4:\n",
-      "In file included from /usr/local/lib/python3.5/site-packages/numpy/core/include/numpy/ndarrayobject.h:18:\n",
-      "In file included from /usr/local/lib/python3.5/site-packages/numpy/core/include/numpy/ndarraytypes.h:1788:\n",
-      "/usr/local/lib/python3.5/site-packages/numpy/core/include/numpy/npy_1_7_deprecated_api.h:15:2: warning: \"Using deprecated NumPy API, disable it by \"          \"#defining NPY_NO_DEPRECATED_API NPY_1_7_API_VERSION\" [-W#warnings]\n",
-      "#warning \"Using deprecated NumPy API, disable it by \" \\\n",
-      " ^\n",
-      "/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/fortranobject.c:139:18: warning: comparison of integers of different signs: 'Py_ssize_t' (aka 'long') and 'unsigned long' [-Wsign-compare]\n",
-      "        if (size < sizeof(notalloc)) {\n",
-      "            ~~~~ ^ ~~~~~~~~~~~~~~~~\n",
-      "2 warnings generated.\n",
-      "compiling Fortran sources\n",
-      "Fortran f77 compiler: /usr/local/bin/gfortran -Wall -g -ffixed-form -fno-second-underscore -fPIC -O3 -funroll-loops\n",
-      "Fortran f90 compiler: /usr/local/bin/gfortran -Wall -g -fno-second-underscore -fPIC -O3 -funroll-loops\n",
-      "Fortran fix compiler: /usr/local/bin/gfortran -Wall -g -ffixed-form -fno-second-underscore -Wall -g -fno-second-underscore -fPIC -O3 -funroll-loops\n",
-      "creating /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/Users\n",
-      "creating /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/Users/mac\n",
-      "creating /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/Users/mac/.ipython\n",
-      "creating /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/Users/mac/.ipython/fortran\n",
-      "compile options: '-I/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5 -I/usr/local/lib/python3.5/site-packages/numpy/core/include -I/usr/local/include -I/usr/local/opt/openssl/include -I/usr/local/opt/sqlite/include -I/usr/local/Cellar/python3/3.5.2_3/Frameworks/Python.framework/Versions/3.5/include/python3.5m -c'\n",
-      "gfortran:f90: /Users/mac/.ipython/fortran/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a.f90\n",
-      "/Users/mac/.ipython/fortran/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a.f90:55:26:\n",
-      "\n",
-      "       IF(ISITE.GT.0) THEN  ! Split repulsion potential\n",
-      "                          1\n",
-      "Warning: Nonconforming tab character at (1) [-Wtabs]\n",
-      "/Users/mac/.ipython/fortran/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a.f90:4:22:\n",
-      "\n",
-      "         COMMON/POTHUT/ RLAM(20),BLAM(20),OLAM(20),RDISPC, &\n",
-      "                      1\n",
-      "Warning: Padding of 4 bytes required before 'c10o' in COMMON 'pothut' at (1); reorder elements or use -fno-align-commons\n",
-      "gfortran:f77: /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a-f2pywrappers.f\n",
-      "/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a-f2pywrappers.f:45:21:\n",
-      "\n",
-      "       common /pothut/ rlam,blam,olam,rdispc,rref,bfac,rdispo,bond,\n",
-      "                     1\n",
-      "Warning: Padding of 4 bytes required before 'c10o' in COMMON 'pothut' at (1); reorder elements or use -fno-align-commons\n",
-      "/usr/local/bin/gfortran -Wall -g -Wall -g -undefined dynamic_lookup -bundle /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115amodule.o /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/fortranobject.o /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/Users/mac/.ipython/fortran/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a.o /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr/src.macosx-10.9-x86_64-3.5/_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a-f2pywrappers.o -L/usr/local/Cellar/gcc/6.3.0_1/lib/gcc/6/gcc/x86_64-apple-darwin13.4.0/6.3.0 -L/usr/local/lib -L/usr/local/opt/openssl/lib -L/usr/local/opt/sqlite/lib -lgfortran -o ./_fortran_magic_7e934ac6ab72d2894e0abcbf8602115a.cpython-35m-darwin.so\n",
-      "Removing build directory /var/folders/qr/bp962l4d4msfkd10wx2b41z80000gn/T/tmpkdritshr\n",
       "\n",
       "Ok. The following fortran objects are ready to use: potdat4, sumleg, pothut\n"
      ]
     }
    ],
    "source": [
-    "%%fortran --fcompiler gnu95 -vvv\n",
+    "%%fortran --fcompiler gnu95 -v\n",
     "\n",
     "    SUBROUTINE POTDAT4\n",
     "    IMPLICIT REAL*8 (A-H,O-Z)\n",
@@ -328,6 +214,8 @@
     "            RREF,BFAC,RDISPO,BOND,C8O2,ISITE,C10O,C8O,C6O,C10C2, &\n",
     "            C8C2, C6C2,C10C,C8C,C6C,SITE,C10O2,SFAC2,SFAC0,C6O2, &\n",
     "            SFACE,SFACC, NLEGC,NLEGO\n",
+    "            \n",
+    "    print *, \"HEY\"\n",
     "            \n",
     "    DATA ISITE,SFAC0,SFAC2,BFAC/1, 4.6454D0, 0.6288D0, 1.D0/\n",
     "    DATA NLEGC,NLEGO,RREF,BOND/5, 5, 7.D0, 2.196D0/\n",
@@ -349,6 +237,8 @@
     "    \n",
     "    DO 100 I=1,NLEGC+NLEGO\n",
     "    100 RLAM(I)=RLAM(I)*1.D-6\n",
+    "    \n",
+    "    print *, '1.D0', 1.D0\n",
     "    \n",
     "    C6C=FRACC*C6\n",
     "    C6O=0.5D0*(C6-C6C)\n",
@@ -419,24 +309,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running...\n",
-      "   /usr/local/opt/python3/bin/python3.5 -m numpy.f2py --fcompiler=gnu95 -m _fortran_magic_39e20a360b5d942f4357f74b1a2b2353 -c /Users/mac/.ipython/fortran/_fortran_magic_39e20a360b5d942f4357f74b1a2b2353.f90\n",
       "\n",
-      "Ok. The following fortran objects are ready to use: pothut, extpot\n"
+      "Ok. The following fortran objects are ready to use: extpot, pothut\n"
      ]
     }
    ],
    "source": [
-    "%%fortran --fcompiler gnu95 -vv\n",
+    "%%fortran --fcompiler gnu95 -v\n",
     "\n",
     "function extpot(r,costh)\n",
     "! very bad thing that forces compiler to initialize a variable when some unknown name is came upon\n",
@@ -540,7 +430,9 @@
    "cell_type": "code",
    "execution_count": 130,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -562,7 +454,9 @@
    "cell_type": "code",
    "execution_count": 131,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -578,6 +472,19 @@
    ],
    "source": [
     "sumleg(3, [1, 2], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "potdat4()"
    ]
   },
   {
