--- a/monte-carlo/full_equilibirum_constant/tex/main.tex
+++ b/monte-carlo/full_equilibirum_constant/tex/main.tex
@@ -12,10 +12,16 @@
 	top=10mm,
 	}
 
+\usepackage{graphicx}
+\usepackage{tabularx, ragged2e, booktabs, caption}
+
 \newcommand{\lb}{\left(}
 \newcommand{\rb}{\right)}
 
 \newcommand{\mH}{\mathcal{H}}
+
+\newcolumntype{C}[1]{>{\Centering}m{#1}}
+\renewcommand\tabularxcolumn[1]{C{#1}}
 
 \begin{document}
 
@@ -100,10 +106,41 @@
 	= 4 \pi Q_{Ar} Q_{CO_2} \int \int_{U < 0} \exp \lb -\frac{U}{kT}\rb \frac{\gamma \lb \frac{5}{2}, - \frac{U}{kT} \rb}{\Gamma \lb \frac{5}{2} \rb} R^2 \sin \theta dR d\theta \notag
 \end{gather}
 
-Приходим к следующему выражению для коснтанты равновесия:
+Приходим к следующему выражению для константы равновесия:
 \begin{gather}
 	K_p = \frac{4 \pi N_0}{R T} \int \int_{U < 0} \exp \lb -\frac{U}{kT}\rb \frac{\gamma \lb \frac{5}{2}, - \frac{U}{kT} \rb}{\Gamma \lb \frac{5}{2} \rb} R^2 \sin \theta dR d\theta \notag 
 \end{gather}
+
+\newpage
+
+Сравним значения получаемые при интегрировании гамильтониана по области фазового пространства с интегралом по потенциальной области следующим образом:
+\begin{gather}
+	(1): \int \int_{U < 0} \exp \lb -\frac{U}{kT} \rb \frac{\gamma \lb \frac{5}{2}, -\frac{U}{kT} \rb}{\Gamma \lb \frac{5}{2} \rb } R^2 dR d \theta \notag \\
+	(2): \int \int_{U < 0} \exp \lb -\frac{U}{kT} \rb \frac{\gamma \lb \frac{5}{2}, -\frac{U}{kT} \rb}{\Gamma \lb \frac{5}{2} \rb } R^2 \sin \theta dR d \theta \notag \\
+	(3): \frac{1}{\lb 2 \mu_2 kT \rb^{\frac{3}{2}}} \frac{1}{2 \mu_1 l^2 kT} \int_{H < 0} \exp \lb - \frac{H_{mol}}{kT} \rb dR dp_R d\theta dp_\theta dJ_x dJ_y dJ_z \notag
+\end{gather}
+
+\begin{center}
+\begin{tabular}{cccc}
+	\hline
+	Температура & $(1)$ & $(2)$ & $(3)$ \\
+	\hline
+	100K & 695.874 & 521.833 & 521.392 \\
+	150K & 205.405 & 151.053 & 151.121 \\
+	200K & 91.111 & 66.442 &  66.376 \\
+	250K & 49.448 & 35.884 & 35.802 \\
+	\hline
+\end{tabular} 
+\end{center}
+
+\vspace{0.3cm}
+С точностью до погрешности Монте-Карло формулы $(2)$ и $(3)$ дают одинаковый результат. (Интеграл в $(3)$ имеет порядок примерно $1 \cdot 10^8$, так что погрешности там могут быть достаточно существенными.)
+
+(При построении графика предполагаю, что потерял $2$ку в предынтегральном множителе, то есть следующий его вид: $\frac{2 \pi N_0}{RT}$.) 
+
+Температурная зависимость константы равновесия в обратных атмосферах; Simple formula -- $(1)$, General formula -- $(2)$ = $(3)$.
+
+\includegraphics[scale=1.0]{plot.png}
 
 \newpage
 
